--- a/koodi/viikko4/VerkkokauppaSpring/build.gradle
+++ b/koodi/viikko4/VerkkokauppaSpring/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-context-support', version: '5.1.2.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '5.1.2.RELEASE'    
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.10.0'
+
 }
 
 mainClassName = 'ohtu.Main'
